<resources>
    <string name="app_name">Guiame</string>
    <string name="Salir">Salir</string>
    <string name="AgregarAula">Agregar Aula</string>
    <string name="DescargarInfo">Descargar Información</string>

    <string name="dni">Dni</string>
    <string name="mail">Mail</string>
    <string name="nombre">Nombre y Apellido</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetirContraseña">Repita la contraseña</string>

    <string name="numeroAula">Ingrese número de aula</string>
    <string name="nombreCurso"> Ingrese nombre de la materia</string>
    <string name="guiaNombreCurso">Puede dejar el nombre original de la materia o cambiarlo por uno que usted desee.</string>

    <string name="verModulos">Mostrar Módulos</string>
    <string name="ocultarModulos">Ocultar Módulos</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar">Buscar</string>
    <string name="localizarCurso">Localizar</string>
    <string name="olvideContrasena">Olvidé mi contraseña</string>
    <string name="hintContrasena">Ingrese el mail con el que registró su cuenta de usuario:</string>
    <string name="recuperarContrasena">Recuperar contraseña</string>

    <string name="iniciarSesion">Iniciar Sesion</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="misCursos">Ver mis cursos</string>
    <string name="modificarPerfil">Modificar Perfil</string>

    <string name="buscarAula">Buscar Aula</string>
    <string name="hintAula">Ingrese numero de Aula</string>

    <string name="buscarCurso">Buscar curso</string>
    <string name="guardarCurso">Guardar curso</string>
    <string name="borrarCurso">Borrar curso</string>

    <string name="verDetalles">Ver detalles</string>

    <string name="agregarNuevoCurso">Agregar nuevo curso</string>
    <string name="guiaBorrarCurso">Seleccione el curso a borrar</string>

    <string name="title_activity_pantalla_principal">Principal</string>
    <string name="title_activity_ingreso">Ingresar cuenta</string>
    <string name="title_activity_lista">Bienvenid@</string>
    <string name="title_activity_mapa">Mapa</string>

    <string name="title_activity_agregar_aula">Agregar aula</string>
    <string name="title_activity_registro">Registro de cuenta</string>
    <string name="title_activity_curso_personalizado">Curso Personalizado</string>
    <string name="title_activity_nombre_curso_personalizado">Nombre personalizado</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_recuperacion">Recuperacion</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_descarga_info">DescargaInfo</string>

</resources>
