<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.pps1.guiame.guiame.presentacion.controlador.ListaMaterias">

    <item android:id="@+id/IniciarSesion" android:title="@string/IniciarSesion"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/Registrarse" android:title="@string/registrarse"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/AgregarNuevoCurso" android:title="@string/agregarNuevoCurso"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/Salir" android:title="@string/Salir"
    android:orderInCategory="100" app:showAsAction="never" />
</menu>
