<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/guiaNombreCurso"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textSize="15dp"
            android:layout_marginTop="20dip"
            android:id="@+id/lblNombreMateria" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/nombreCurso"
            android:textColor="@color/input_login"
            android:padding="10dp"
            android:background="@color/white"
            android:textColorHint="@color/hint_claro"
            android:id="@+id/txtNombreMateria" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/boton"
            android:layout_marginTop="10dip"
            android:textColor="@color/white"
            android:text="@string/guardarCurso"
            android:id="@+id/btnGuardarNombre"/>


    </LinearLayout>
</LinearLayout>